--- a/src/main/resources/fxml/setup/theme.fxml
+++ b/src/main/resources/fxml/setup/theme.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -41,5 +42,6 @@
          </children>
       </AnchorPane>
       <Button fx:id="themeNextButton" layoutX="737.0" layoutY="559.0" mnemonicParsing="false" styleClass="default-choose-button" text="Next" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
+      <ProgressBar layoutX="300.0" layoutY="565.0" prefHeight="15.0" prefWidth="200.0" progress="0.0" />
    </children>
 </AnchorPane>
