--- a/src/main/resources/fxml/setup/jdk.fxml
+++ b/src/main/resources/fxml/setup/jdk.fxml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <!--
@@ -19,8 +23,45 @@
             <Font size="42.0" />
          </font>
       </Label>
-      <ProgressBar layoutX="300.0" layoutY="565.0" prefHeight="15.0" prefWidth="200.0" progress="0.25" />
-      <Button fx:id="nextButton" layoutX="731.0" layoutY="559.0" mnemonicParsing="false" styleClass="default-choose-button" text="Next" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
-      <Button fx:id="backButton" layoutX="679.0" layoutY="559.0" mnemonicParsing="false" styleClass="default-button" text="Back" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="72.0" />
+      <ProgressBar fx:id="progressBar" layoutX="300.0" layoutY="565.0" prefHeight="15.0" prefWidth="200.0" progress="0.5" />
+      <Button fx:id="finishButton" defaultButton="true" disable="true" layoutX="731.0" layoutY="559.0" mnemonicParsing="false" styleClass="default-choose-button" text="Finish" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
+      <Button fx:id="backButton" layoutX="670.0" layoutY="559.0" mnemonicParsing="false" styleClass="default-button" text="Back" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="79.0" />
+      <AnchorPane fx:id="step1" layoutX="48.0" layoutY="107.0" prefHeight="408.0" prefWidth="324.0" style="-fx-background-color: -fx-default-light;">
+         <children>
+            <Label layoutX="87.0" layoutY="14.0" style="-fx-font-size: 20px;" styleClass="default-label" text="Download JDK" AnchorPane.leftAnchor="87.0" AnchorPane.rightAnchor="87.0" />
+            <Label layoutX="16.0" layoutY="75.0" prefHeight="55.0" prefWidth="292.0" styleClass="default-label" text="1. Follow the instructions on the oracle website." textAlignment="CENTER" wrapText="true" />
+            <Button fx:id="goThereButton" layoutX="125.0" layoutY="140.0" mnemonicParsing="false" styleClass="default-choose-button" text="Go There" />
+            <Line endX="136.0" layoutX="166.0" layoutY="204.0" startX="-144.0" style="-fx-stroke: -fx-default-dark;" />
+            <Label alignment="CENTER" layoutX="17.0" layoutY="249.0" prefHeight="55.0" prefWidth="292.0" styleClass="default-label" text="2. Verify it was downloaded and installed correctly." textAlignment="CENTER" wrapText="true" />
+            <Button fx:id="verifyButton" layoutX="134.0" layoutY="313.0" mnemonicParsing="false" styleClass="default-button" text="Verify" />
+            <Label fx:id="statusLabel" alignment="CENTER" layoutX="5.0" layoutY="373.0" prefHeight="21.0" prefWidth="317.0" style="-fx-text-fill: green;" styleClass="default-label" text="Success..." textAlignment="CENTER" visible="false" />
+            <ImageView fx:id="checkStep1" fitHeight="249.0" fitWidth="239.0" layoutX="44.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../../images/setup/check.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+      <Label fx:id="step1Label" layoutX="207.0" layoutY="521.0" styleClass="default-label" text="1" />
+      <Label fx:id="step2Label" disable="true" layoutX="595.0" layoutY="254.0" styleClass="default-label" text="2" />
+      <AnchorPane fx:id="step2" disable="true" layoutX="438.0" layoutY="107.0" prefHeight="138.0" prefWidth="324.0" style="-fx-background-color: -fx-default-light;">
+         <children>
+            <Label layoutX="100.0" layoutY="14.0" prefHeight="26.0" prefWidth="124.0" style="-fx-font-size: 20px;" styleClass="default-label" text="Choose JDK" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" />
+            <ComboBox fx:id="versionDropdown" layoutX="37.0" layoutY="69.0" prefHeight="22.0" prefWidth="264.0" promptText="Select Version..." />
+            <ImageView fx:id="checkStep2" fitHeight="114.0" fitWidth="150.0" layoutX="105.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../../images/setup/check.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="438.0" layoutY="309.0" prefHeight="206.0" prefWidth="324.0" style="-fx-background-color: -fx-default-light;">
+         <children>
+            <Label alignment="CENTER" layoutY="14.0" prefHeight="26.0" prefWidth="324.0" style="-fx-font-size: 20px;" styleClass="default-label" text="Why Do I Need It?" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0" />
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="11.0" layoutY="53.0" prefHeight="149.0" prefWidth="302.0" styleClass="default-label" text="Good question. Harmony Engine requires a Java JDK so all the Java programs you write can be compiled into binary. Without it the computer would not know how to understand you. Beep boop..." textAlignment="CENTER" wrapText="true" />
+            <Line endX="136.0" layoutX="166.0" layoutY="49.0" startX="-144.0" style="-fx-stroke: -fx-default-dark;" />
+         </children>
+      </AnchorPane>
+      <Button fx:id="chooseAgain" layoutX="551.0" layoutY="251.0" mnemonicParsing="false" styleClass="default-button" text="Choose Again" visible="false" />
    </children>
 </AnchorPane>
