--- a/src/main/resources/engine.fxml
+++ b/src/main/resources/engine.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
@@ -244,7 +245,35 @@
                                                 </AnchorPane>
                                                 <AnchorPane fx:id="editorPane" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                                     <children>
-                                                        <Canvas fx:id="editorCanvas" height="244.0" width="481.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                        <Canvas fx:id="editorCanvas" height="517.0" width="533.0" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0" />
+                                                <AnchorPane layoutX="279.0" layoutY="6.0" prefHeight="37.0" prefWidth="247.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="6.0">
+                                                   <children>
+                                                    <Button fx:id="zoom200" mnemonicParsing="false" prefWidth="65.0" text="200%" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                         <styleClass>
+                                                            <String fx:value="default-button" />
+                                                            <String fx:value="zoom-button" />
+                                                         </styleClass>
+                                                      </Button>
+                                                      <Button fx:id="zoom150" layoutX="68.0" layoutY="5.0" mnemonicParsing="false" prefWidth="65.0" style="-fx-border-radius: 0px;" text="150%" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="0.0">
+                                                         <styleClass>
+                                                            <String fx:value="default-button" />
+                                                            <String fx:value="zoom-button" />
+                                                         </styleClass>
+                                                      </Button>
+                                                      <Button fx:id="zoom100" layoutX="14.0" layoutY="4.0" mnemonicParsing="false" prefWidth="65.0" style="-fx-border-radius: 0px;" text="100%" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="120.0" AnchorPane.topAnchor="0.0">
+                                                         <styleClass>
+                                                            <String fx:value="default-button" />
+                                                            <String fx:value="zoom-button" />
+                                                         </styleClass>
+                                                      </Button>
+                                                      <Button fx:id="zoom50" layoutX="-23.0" mnemonicParsing="false" prefWidth="65.0" text="50%" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="180.0" AnchorPane.topAnchor="0.0">
+                                                         <styleClass>
+                                                            <String fx:value="default-button" />
+                                                            <String fx:value="zoom-button" />
+                                                         </styleClass>
+                                                      </Button>
+                                                   </children>
+                                                </AnchorPane>
                                                     </children>
                                                 </AnchorPane>
                                             </items>
