--- a/src/main/resources/engine.fxml
+++ b/src/main/resources/engine.fxml
@@ -315,7 +315,25 @@
                               <SplitPane dividerPositions="0.26256281407035176" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: -fx-default-medium;" styleClass="default-split-pane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <items>
                                     <TreeView fx:id="codeFileList" prefHeight="512.0" prefWidth="138.0" style="-fx-font-family: sans-serif;" />
-                                    <WebView fx:id="codeView" prefHeight="200.0" prefWidth="200.0" />
+                                    <AnchorPane>
+                                       <children>
+                                          <AnchorPane prefHeight="511.0" prefWidth="583.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                             <children>
+                                                <AnchorPane fx:id="codeNoFilePane" styleClass="anchor-section" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                   <children>
+                                                      <Label alignment="CENTER" layoutX="-1.0" layoutY="248.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="21.0" prefWidth="584.0" styleClass="default-label" text="No Open Files" textAlignment="CENTER" AnchorPane.bottomAnchor="247.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="248.0" />
+                                                   </children>
+                                                </AnchorPane>
+                                                <AnchorPane fx:id="codeTabEditorPane" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                   <children>
+                                                      <WebView fx:id="codeView" layoutY="35.0" prefHeight="481.0" prefWidth="583.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="35.0" />
+                                                      <TabPane fx:id="codeTabBar" prefHeight="38.0" prefWidth="583.0" styleClass="short" tabClosingPolicy="UNAVAILABLE" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                   </children>
+                                                </AnchorPane>
+                                             </children>
+                                          </AnchorPane>
+                                       </children>
+                                    </AnchorPane>
                                  </items>
                               </SplitPane>
                            </children>
