Fixed the light theme

--- a/src/main/resources/css/themes/lightTheme.css
+++ b/src/main/resources/css/themes/lightTheme.css
@@ -4,6 +4,6 @@
     -fx-default-light: #e3e3e3;
     -fx-default-medium: #ffffff;
     -fx-default-extra-light: #ffffff;
-    -fx-default-dark: f2f2f2;
+    -fx-default-dark: #f2f2f2;
     -fx-default-text-fill: #242424;
 }
