--- a/src/main/resources/launcher.fxml
+++ b/src/main/resources/launcher.fxml
@@ -1,95 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<!--
-  ~ Copyright © 2020 Harmony Engines.
-  ~ All rights reserved.
-  -->
+<AnchorPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="com.harmony.engine.controllers.LauncherController"
+            prefHeight="600.0" prefWidth="800.0">
 
-<AnchorPane id="launcher-pane" fx:id="anchorPane" prefHeight="600.0" prefWidth="800.0" stylesheets="@css/harmony.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.harmony.engine.LauncherController">
-   <children>
-      <Button id="new-proj-btn" fx:id="newProjectButton" layoutX="87.0" layoutY="508.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="251.0" text="New Project" AnchorPane.bottomAnchor="46.0" AnchorPane.leftAnchor="87.0" AnchorPane.rightAnchor="462.0" AnchorPane.topAnchor="508.0" />
-      <Button id="new-proj-btn" fx:id="openProjectButton" layoutX="470.0" layoutY="508.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="251.0" text="Open Project" AnchorPane.bottomAnchor="46.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="87.0" AnchorPane.topAnchor="508.0" />
-      <Label alignment="CENTER" layoutX="143.0" layoutY="14.0" style="-fx-font-size: 37px;" styleClass="default-label" text="Harmony Engine" AnchorPane.leftAnchor="141.5" AnchorPane.rightAnchor="141.5" AnchorPane.topAnchor="14.0">
-         <font>
-            <Font size="37.0" />
-         </font>
-      </Label>
-      <Label fx:id="versionLabel" alignment="CENTER" layoutX="252.0" layoutY="68.0" styleClass="default-label" text="Version: 0.0.0" AnchorPane.leftAnchor="141.5" AnchorPane.rightAnchor="141.5">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
-
-      <Button fx:id="globalPreferencesButton" layoutX="539.0" layoutY="343.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="27.0" style="-fx-background-color: transparent;" styleClass="default-button" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
-      <ProgressBar fx:id="pb" layoutX="43.0" layoutY="367.0" prefHeight="20.0" prefWidth="554.0" progress="0.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="43.0" AnchorPane.rightAnchor="43.0" />
-      <AnchorPane layoutX="88.0" layoutY="187.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: -fx-default-medium;" AnchorPane.bottomAnchor="113.0" AnchorPane.leftAnchor="88.0" AnchorPane.rightAnchor="86.0" AnchorPane.topAnchor="187.0">
-         <children>
-            <Label fx:id="noRecentLabel" layoutX="193.0" layoutY="134.0" style="-fx-font-size: 25px;" styleClass="default-label" text="No Recent Projects" AnchorPane.bottomAnchor="134.0" AnchorPane.leftAnchor="193.0" AnchorPane.rightAnchor="192.0" AnchorPane.topAnchor="134.0" />
-            <Label fx:id="p1" alignment="CENTER" layoutX="1.0" layoutY="7.0" prefHeight="21.0" prefWidth="626.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
-               <styleClass>
-                  <String fx:value="default-label" />
-                  <String fx:value="button-label" />
-               </styleClass>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <padding>
-                  <Insets bottom="4.0" top="4.0" />
-               </padding></Label>
-            <Label fx:id="p2" alignment="CENTER" layoutY="66.0" prefHeight="21.0" prefWidth="626.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
-               <styleClass>
-                  <String fx:value="default-label" />
-                  <String fx:value="button-label" />
-               </styleClass>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <padding>
-                  <Insets bottom="4.0" top="4.0" />
-               </padding></Label>
-            <Label fx:id="p3" alignment="CENTER" layoutY="133.0" prefHeight="21.0" prefWidth="626.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
-               <styleClass>
-                  <String fx:value="default-label" />
-                  <String fx:value="button-label" />
-               </styleClass>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <padding>
-                  <Insets bottom="4.0" top="4.0" />
-               </padding></Label>
-            <Label fx:id="p4" alignment="CENTER" layoutX="1.0" layoutY="196.0" prefHeight="21.0" prefWidth="626.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
-               <styleClass>
-                  <String fx:value="default-label" />
-                  <String fx:value="button-label" />
-               </styleClass>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <padding>
-                  <Insets bottom="4.0" top="4.0" />
-               </padding></Label>
-            <Label fx:id="p5" alignment="CENTER" layoutX="2.0" layoutY="266.0" prefHeight="21.0" prefWidth="626.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
-               <styleClass>
-                  <String fx:value="default-label" />
-                  <String fx:value="button-label" />
-               </styleClass>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <padding>
-                  <Insets bottom="4.0" top="4.0" />
-               </padding></Label>
-         </children>
-      </AnchorPane>
-      <Label fx:id="recentProjects" layoutX="301.0" layoutY="135.0" style="-fx-font-size: 25px;" styleClass="default-label" text="Recent Projects" AnchorPane.bottomAnchor="433.0" AnchorPane.leftAnchor="301.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="135.0" />
-   </children>
 </AnchorPane>
