--- a/src/main/resources/launcher.fxml
+++ b/src/main/resources/launcher.fxml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.harmony.engine.controllers.LauncherController"
-            prefHeight="600.0" prefWidth="800.0">
 
+<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="anchor-section" stylesheets="@css/harmony.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.harmony.engine.controllers.LauncherController">
+   <children>
+      <Label layoutX="325.0" layoutY="14.0" style="-fx-font-size: 50px;" styleClass="default-label" text="Harmony Engine" AnchorPane.rightAnchor="47.0">
+         <font>
+            <Font size="76.0" />
+         </font>
+      </Label>
+      <Label fx:id="versionID" alignment="CENTER" layoutX="325.0" layoutY="77.0" style="-fx-font-family: sans-serif;" styleClass="default-label" textAlignment="CENTER" AnchorPane.leftAnchor="325.0" AnchorPane.rightAnchor="47.0" />
+      <Button fx:id="newProjectButton" alignment="CENTER" layoutX="417.0" layoutY="300.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="242.0" styleClass="default-button" text="New Project" AnchorPane.leftAnchor="417.0" AnchorPane.rightAnchor="141.0">
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </Button>
+      <Button fx:id="openProjectButton" alignment="CENTER" layoutX="419.0" layoutY="360.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="242.0" styleClass="default-button" text="Open Project" />
+      <AnchorPane fx:id="recentProjectsPane" prefHeight="600.0" prefWidth="286.0" style="-fx-background-color: -fx-default-dark;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+   </children>
 </AnchorPane>
