--- a/src/main/resources/css/harmony.css
+++ b/src/main/resources/css/harmony.css
@@ -111,25 +111,21 @@
     -fx-background-color: transparent;
 }
 
-.scroll-bar:horizontal, .scroll-bar:vertical {
-    -fx-background-color:transparent;
-}
-
-.increment-button, .decrement-button {
-    -fx-background-color: transparent;
-    -fx-border-color: transparent;
+.scroll-bar > .increment-button, .decrement-button {
+    -fx-max-height: 0;
+    -fx-pref-height: 0;
 }
 
 .scroll-bar:horizontal .track,
 .scroll-bar:vertical .track {
-    -fx-background-color: transparent;
-    -fx-border-color: transparent;
+    -fx-background-color: -fx-default-medium;
+    -fx-border-color: -fx-default-medium;
     -fx-background-radius: 0em;
 }
 
 .scroll-bar:horizontal .thumb,
 .scroll-bar:vertical .thumb {
-    -fx-background-color: -fx-default-extra-light;
+    -fx-background-color: -fx-default-dark;
     -fx-background-radius: 5em;
 }
 
@@ -281,12 +277,12 @@
 }
 
 .tab-pane > .tab-header-area > .headers-region > .tab >.tab-container >.tab-label {
-    -fx-text-fill: -fx-tab-color;
+    -fx-text-fill: -fx-default-text-fill;
     -fx-font-family: 'Montserrat';
 }
 
 .tab-pane > .tab-header-area > .headers-region > .tab:selected {
-    -fx-background-color: -fx-tab-selected-color, -fx-default-medium;
+    -fx-background-color: -fx-default-medium, -fx-default-medium;
     -fx-background-insets: 0, 0 0 2px 0;
 }
 
@@ -299,12 +295,16 @@
 }
 
 .tab-pane > .tab-header-area > .headers-region > .tab:selected >.tab-container >.tab-label {
-    -fx-text-fill: -fx-tab-selected-color;
+    -fx-text-fill: -fx-default-text-fill;
     -fx-font-family: 'Montserrat';
 }
 
 .tab-pane > .tab-header-area > .headers-region > .tab:selected >.tab-container >.focus-indicator {
     -fx-opacity: 0;
+}
+
+.tab-pane > .tab-header-area > .headers-region > .tab > .tab-container > .tab-close-button {
+    -fx-background-color: -fx-default-extra-light;
 }
 
 .spinner {
