--- a/src/main/resources/fxml/engine.fxml
+++ b/src/main/resources/fxml/engine.fxml
@@ -36,8 +36,7 @@
                               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
                                     <TreeView fx:id="fileManager" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                    <AnchorPane fx:id="fileManagerBlurPane" prefHeight="251.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                    <VBox fx:id="newFilePane" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <VBox fx:id="newFilePane" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                        <children>
                                           <TextField fx:id="newFileField" promptText="File Name" styleClass="default-text-field">
                                              <opaqueInsets>
@@ -47,7 +46,7 @@
                                                 <Insets bottom="20.0" />
                                              </VBox.margin>
                                           </TextField>
-                                          <Button fx:id="createNewFileButton" mnemonicParsing="false" styleClass="default-choose-button" text="Create" />
+                                          <Button fx:id="createNewFileButton" defaultButton="true" disable="true" mnemonicParsing="false" styleClass="default-choose-button" text="Create" />
                                        </children>
                                        <padding>
                                           <Insets left="10.0" right="10.0" />
